# flyte-template

./: Makefile  README.md  pyproject.toml  requirements-tools.txt  requirements.txt
notebooks/: playground.ipynb
src/project/core/: classifiers.py  data.py
src/project/tasks/: __init__.py  analyze.py  preprocess.py
src/project/workflows/: wine_classifier.py
tests/: test_stats.py
